# ghost

./: .ghost  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dev-layout.kdl  justfile  verify_signature.sh
.github/workflows/: release.yaml
scripts/: ghost_launcher.sh  prompt.sh
src/: main.rs
