[package]
name = "ghost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
zellij-tile = "0.40.0"
zellij-utils = "0.40.0"

owo-colors = "3.5.0"
shellwords = "1.0.0"
fuzzy-matcher = "0.3.7"
# sprintf = "0.1.3"

